frontend/src/App.css
.App-mainBody {
  padding-top:50px;
  padding-bottom:50px;
}

.App-breadcrumbs {
  padding-bottom:50px;
}

.incumbent {
  padding-left:5px;
}

.candidateList {
  height: 100%;
  padding: 0.6em;
}

.candidateList.republican {
  background-color: #f7a8a8;
}

.candidateList.democrat {
  background-color: #dadef7;
}

.candidateList.other {
  background-color: #d9d7d7;
}

.candidateLink a {
  color: black;
}

.stateNavigationButton {
  margin-left:1em;
}

